--- a/composer.json
+++ b/composer.json
@@ -11,8 +11,7 @@
     ],
     "require": {
         "php": "^8.1",
-        "illuminate/console": "^12.0",
-        "illuminate/support": "^12.0",
+        "laravel/framework": ">=11.0",
         "wikimedia/composer-merge-plugin": "^2.0"
     },
     "autoload": {
